@@ -10,7 +10,7 @@
 
 <package-info xmlns="http://www.simplemachines.org/xml/package-info" xmlns:smf="http://www.simplemachines.org/">
 	<id>el:prettyurls</id>
-	<version>0.6</version>
+	<version>0.7</version>
 	<name>Pretty URLs - Base</name>
 	<type>modification</type>
 
