@@ -14,12 +14,11 @@
 	<section>
 		<title>Pretty URLs Package List</title>
 		<text>Please note, the Base package MUST be installed and configured correctly before other packages can be used.</text>
-
 		<modification>
 			<id>el:prettyurls</id>
-			<version for="1.1, 1.1.0-1.1.99">0.6</version>
+			<version for="1.1, 1.1.0-1.1.99">0.7</version>
 			<name>Pretty URLs - Base</name>
-			<filename>../../files/prettyurls-base_0_6.tar.gz</filename>
+			<filename>../../files/prettyurls-base_0_7.tar.gz</filename>
 			<description><![CDATA[Pretty URLs - Base]]></description>
 		</modification>
 		<modification>
@@ -28,6 +27,13 @@
 			<name>Pretty URLs - Actions - Extention: none</name>
 			<filename>../../files/prettyurls-actions-ext-none_0_6.tar.gz</filename>
 			<description><![CDATA[Pretty URLs - Actions - Extention: none]]></description>
+		</modification>
+		<modification>
+			<id>el:prettyurls-profiles-ext-none</id>
+			<version for="1.1, 1.1.0-1.1.99">0.7</version>
+			<name>Pretty URLs - Profiles - Extention: none</name>
+			<filename>../../files/prettyurls-profiles_0_7.tar.gz</filename>
+			<description><![CDATA[Pretty URLs - Profiles - Extention: none]]></description>
 		</modification>
 	</section>
 </package-list>
