@@ -10,7 +10,7 @@ Legend:
  % Development flag or note, such as branching.
 
 
-Pretty URLs 0.7                                                      ??
+Pretty URLs 0.7                                                    June 12, 2007
 ================================================================================
  + Base: Romanise Vietnamese, Croatian, Hiragana and Katakana. (Subs-PrettyUrls.php)
  % Started the profiles package.
@@ -18,6 +18,7 @@ Pretty URLs 0.7                                                      ??
  ! Base: Fixed a broken query in Subs-Post.php.
  ! Base: Don't use 301 redirections if rewriting isn't enabled! (Display.php, MessageIndex.php)
  ! Base: Hopefully fixed the queries to work in MySQL 3.34. (install.php)
+ ! Base: Fixed some wrong variables in Subs-Boards.php, weird...
 
 Pretty URLs 0.6                                                      May 2, 2007
 ================================================================================
